MAD-ERP: Phase Four - Financial Intelligence & Industrial Elegance implementation. Unified repository structure, updated environment templates, and cleaned redundant nested directories.